--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -7555,27 +7555,29 @@ EMKhTGlzdG8hA
             <objects>
                 <viewController storyboardIdentifier="vc_loader_custom" title="vc_loader_custom" id="KXo-qM-oi7" userLabel="Alert message" customClass="PakLoaderAlert" customModule="pak_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="YIX-rn-nlb"/>
-                        <viewControllerLayoutGuide type="bottom" id="yfP-qq-uqE"/>
+                        <viewControllerLayoutGuide type="top" id="3YG-JK-vaX"/>
+                        <viewControllerLayoutGuide type="bottom" id="YHT-SW-A1x"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="d8j-zw-MO5">
+                    <view key="view" contentMode="scaleToFill" id="CIk-fV-0SJ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb_ic_box" translatesAutoresizingMaskIntoConstraints="NO" id="z92-qO-OpF">
-                                <rect key="frame" x="155" y="279" width="10" height="10"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb_ic_box" translatesAutoresizingMaskIntoConstraints="NO" id="3ym-Y1-JR8">
+                                <rect key="frame" x="150" y="274" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="JVp-dM-fqc"/>
+                                    <constraint firstAttribute="width" constant="20" id="kBN-Q2-REV"/>
+                                </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="0.59952910958904104" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="0.90178189212328763" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="z92-qO-OpF" secondAttribute="trailing" constant="139" id="2te-Bd-M8r"/>
-                            <constraint firstItem="yfP-qq-uqE" firstAttribute="top" secondItem="z92-qO-OpF" secondAttribute="bottom" constant="279" id="Owe-08-zr6"/>
-                            <constraint firstItem="z92-qO-OpF" firstAttribute="top" secondItem="YIX-rn-nlb" secondAttribute="bottom" constant="259" id="U6A-9F-evQ"/>
-                            <constraint firstItem="z92-qO-OpF" firstAttribute="leading" secondItem="d8j-zw-MO5" secondAttribute="leadingMargin" constant="139" id="mJP-lr-98t"/>
+                            <constraint firstItem="3ym-Y1-JR8" firstAttribute="centerX" secondItem="CIk-fV-0SJ" secondAttribute="centerX" id="N40-fi-DOS"/>
+                            <constraint firstItem="3ym-Y1-JR8" firstAttribute="centerY" secondItem="CIk-fV-0SJ" secondAttribute="centerY" id="aRK-KC-btt"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="iv_loader_image" destination="z92-qO-OpF" id="Vee-sg-NdZ"/>
+                        <outlet property="iv_loader_image" destination="3ym-Y1-JR8" id="X6J-WO-YLL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fbK-td-sVw" userLabel="First Responder" sceneMemberID="firstResponder"/>
